sass/screen.scss
@import "compass/reset";
@import "compass/typography/lists/bullets";
@import "susy";
@import "retina";
@import "sassy-buttons";
@import "fonts";

/* WAQ Theme */
$turquoise  : #20C2DD;
$grey       : #6e6e6e;
$greyLight  : #f3f3f3;
$marine     : #006287;

/* Mobile first grid */
$total-columns: 6;
$column-width: 4em;
$gutter-width: 1.5em;
$grid-padding: 1em; 
$bmarg: 12px;

/* Grid switching */
$break: 12;

.container {
  @include container($total-columns, $break); 

  padding-top:2em;
  font-family: $arial;
  color: $grey;
  
  header, footer { 
    clear: both;
  }

  .main-col {
    .block {
      margin-bottom: $bmarg * 4;
    }
  }

  // Create a media-query breakpoint at a min-width of 30em
  // And use a larger 12-column grid within that media-query.
  @include at-breakpoint($break) {
    // Establish our new 12-column container.
    @include set-container-width;
    .main-col { 
      @include span-columns(6, $total-columns);      
      &.last {
        @include span-columns(6 omega, $total-columns);
      }
    }
  }
}

footer {
  font-size:0.7rem;
  text-align:center;
  margin-bottom: $bmarg * 4;
}

li.ico-yellow:before,
li.ico-red:before {
  content: "";
  padding-right:28px;
  background: image-url('red.png') center left no-repeat;
}

li.ico-red:before {
  @include background-image-retina('red.png');
}

li.ico-yellow:before {
  @include background-image-retina('yellow.png');
}

header {
  overflow:hidden;
  padding-bottom: $bmarg * 4;
  .blocks {
    padding-top:40px;
  }
}

.logo {
  background: image-url('background-small.jpg');
  padding:($bmarg * 6) 0;
}

h1 {
  color: $turquoise;
  font-family: $miso;
  font-size: 4rem;
  text-align:center;
}

h2 {
  color: $marine;
  font-family: $misoLight;
  font-size: 2.3rem;
  margin-bottom: $bmarg;
}

h3 {
  color: $marine;
  font-family: $misoLight;
  font-size: 1.6rem;
  margin-bottom: $bmarg;
}

h4 {
  color: $marine;
  font-family: $arial;
  font-size: 1rem;
  margin-bottom: $bmarg;
}

a {
  color: $marine;
}

strong { font-weight:bold; }

p {
  font-size: 0.9rem;
  line-height: 1.15rem;
  margin-bottom: $bmarg;
}

ul {
  margin-bottom: $bmarg;
}

li {
  font-size: 0.9rem;
  line-height: 20px;
}

ul.bullets {
  @include pretty-bullets("bullet.png", 20px, 20px, 25px, 28px);
  li {
    line-height: 25px;
  }
}

ul.blocks li {
  background-color:$greyLight;
  margin-bottom: $bmarg;
  padding: $bmarg;
}

ul.blocks.icons {
  li {
    background-color: $greyLight;
    margin-bottom: $bmarg;
  }
  li:before {
    content: "";
    padding-right:32px;
    background: image-url('time.png') center left no-repeat;
    font-size:20px;
  }
  .ico-time:before {
    @include background-image-retina('time.png');
  }
  .ico-calendar:before {
    @include background-image-retina('calendar.png');
  }
  .ico-map:before  {
    @include background-image-retina('map.png');
  }
}

.more-2012 {
  font-size:12px;
  a { color: $grey; }
}

.subscribe {
 @include sassy-button("simple", 10px, 19px, #006287);
 @include sassy-button-gradient("matte", #006287);
 text-decoration:none;
 margin-bottom:$bmarg;
}

